# Kotlin-Compiler

./: compilador.cabal  input.kt  output.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Assembler.hs  Generator.hs  Lexer.hs  Lexer.x  Main.hs  Parser.y  SymbolTable.hs
