cabal-version:      3.0
name:               compilador
version:            0.1.0.0
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

executable kotlin-compiler
    import:           warnings
    main-is:          Main.hs
    other-modules:    Lexer, Parser
    build-depends:    base ^>=4.17.2.0, array
    hs-source-dirs:   src
    default-language: Haskell2010
